<resources>
    <string name="app_name" translatable="false">PsyCare</string>
    <string name="input_username">Input Username</string>
    <string name="psycare" translatable="false">PsyCare</string>
    <string name="input_password">Input Password</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_an_account">Don’t have an account yet?</string>
    <string name="daftar">Register</string>
    <string name="we_care" translatable="false">We care what you care the most</string>
    <string name="input_email">Input your email</string>
    <string name="dummy_desc_discussion">saya mau curhat tentang teman saya yang baru saja pergi meninggalkan saya, saya jadi sangat sedih dan stress untuk menghadapi masalahini, bagaimana seharusnya saya bertindak</string>
    <string name="username">Username</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="your_results">YOUR RESULTS</string>
    <string name="anxiety">Anxiety:</string>
    <string name="normal">NORMAL</string>
    <string name="suggestions">SUGGESTIONS</string>
    <string name="dummy_test_desc">Medium Depression Level is a type of Depression that occur because of …</string>
    <string name="stress">Stress:</string>
    <string name="severe">Severe</string>
    <string name="depression">Depression:</string>
    <string name="moderate">Moderate</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_menu">Map Menu</string>
    <string name="test_intro">if you think you feel bad you can take this test, to measure your mental health</string>
    <string name="take_test">Take test</string>
    <string name="service_text">Features</string>
    <string name="psychologist_text">Psychologist</string>
    <string name="pshycologist_desc">find and contact Pshycologist</string>
    <string name="discussion_text">Discussion</string>
    <string name="discussion_desc">share your thought with other people</string>
    <string name="related_article_text">Related Article</string>
    <string name="greeting_user_text">Hi %1$s, \nHow was your day ?</string>
    <string name="submit_text">Submit</string>
    <string name="say_something_reply">Say something...</string>
    <string name="choice_0">Never</string>
    <string name="choice_1">Sometimes</string>
    <string name="choice_2">Often</string>
    <string name="choice_3">Every time</string>
    <string name="discussion_empty">No Discussion Yet</string>
    <string name="discussion_hint">What do you want to share ?</string>
    <string name="status">Status: </string>
    <string name="back_to_home">BACK TO HOME</string>
    <string name="what_you_can_do">What You Can Do ?</string>
    <string name="writer">Writer</string>
    <string name="send_text">Send</string>
    <string name="psychologist_empty">NO PSYCHOLOGIST HERE</string>
    <string name="greeting_default">Hi User, How Was Your Day ?</string>
    <string name="invalid_email">Email address invalid</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_username">Username must be at least 6 characters</string>
    <string name="invalid_empty">Can\'t empty</string>
    <string name="profile_picture">Profile_Picture</string>
</resources>