<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_results"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stress"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"/>

            <TextView
                android:id="@+id/stress_result_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/normal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anxiety"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"/>

            <TextView
                android:id="@+id/anxiety_result_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/normal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depression"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"/>

            <TextView
                android:id="@+id/depression_result_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/normal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>